tests/neg/trailing-comma-pattern.check
-- [E032] Syntax Error: tests/neg/trailing-comma-pattern.scala:3:8 -----------------------------------------------------
3 |// error
  |        ^
  |        pattern expected
  |
  | longer explanation available when compiling with `-explain`
